<resources>
    <string name="app_name">GainsLog</string>
    <string name="app_loginTitle">Login</string>
    <string name="app_loginUser">Email de usuario</string>
    <string name="app_loginPassword">Contraseña</string>
    <string name="app_logincheckbox">Recuérdame</string>
    <string name="app_loginRegister">Registrar</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="app_singupEmail">Introduce aquí tu email</string>
    <string name="app_signupConfirmPass">Confirmar Contraseña</string>
    <string name="singUp_chxTrainer">Perfil Entrenador</string>
    <string name="help_CoachUser">Ayuda - Perfil Entrenador</string>
    <string name="hel_coachTitle">Quieres interactuar con tu cliente, a través de la app?</string>
    <string name="hel_coachInfo">Gracias a este tipo de usuario podrás acceder al sistema para visualizar/modificar/añadir todos los datos del cliente, excepto datos personales relativos a la cuenta personal, pero sí sus ejercicios,rutinas,etc....</string>
    <string name="hel_coachExc1">- En el caso de que el cliente, haya denegado varios permisos el entrenador, no podrá cambiar esos permisos </string>
    <string name="hel_coachExc2">- Para ser entrenador/colaborador, de un usuario, deberás enviarle una petición a este, y este deberá aceptar la petición </string>
    <string name="hel_coacVent1">- Seguimiento riguroso del progreso del cliente. </string>
    <string name="hel_coacVent2">- Comunicarse directamente con el cliente a través del chat habilitado, entre entrenador-cliente. </string>
    <string name="hel_coacVentTit3">"- Añadirle recordatorio,ejercicios,rutinas,etc... para que el cliente pueda utilizarlas. "</string>
    <string name="hel_coachExcTit">ANOTACIONES</string>
    <string name="hel_coachVentTit">VENTAJAS</string>
    <string name="err_userEmpty">El usuario no puede estar vacío</string>
    <string name="err_passwordEmpty">La contraseña no puede estar vacia</string>
    <string name="err_authentication">Error de autenticacion</string>
    <string name="err_passwordFormat">Formato Incorrecto</string>
    <string name="err_userExists">El usuario ya existe</string>
    <string name="err_confirmPassword">Las contraseñas no coinciden</string>
    <string name="err_emailEmpty">El email no puede estar vacío</string>
    <string name="err_emailFormat">Formato incorrecto</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="tvTitleMain">Registro</string>
    <string name="titleBoxDat">Almacén</string>
    <string name="muscle_pectoral">Pectoral</string>
    <string name="muscle_espalda">Espalda</string>
    <string name="muscle_hombro">Deltoides</string>
    <string name="muscle_biceps">Biceps</string>
    <string name="muscle_triceps">Triceps</string>
    <string name="muscle_abdomen">Abdomen</string>
    <string name="muscle_gluteo">Glúteo</string>
    <string name="muscle_gemelos">Gemelos</string>
    <string name="muscle_quad">Cruadriceps</string>
    <string name="muscle_femoral">Femoral</string>
    <string name="box_titTipoData">Tipo</string>
    <string name="box_typeDataExercise">Ejercicio</string>
    <string name="err_ConectionRepositoory">Error de conexión</string>
    <string name="err_EmptyRepository">Error, Repositorio vacío</string>
    <string name="action_bar_sortLIst">Ordenar listado</string>
    <string name="action_bar_help">Ayuda</string>
    <string name="action_bar_aboutUs">Sobre nosotros</string>
    <string name="nameExercise">Nombre del Ejercicio</string>
    <string name="notes">Notas</string>
    <string name="descripotion">Descripción</string>
    <string name="material">Material</string>
    <string name="muscculos">Musculos</string>
    <string name="addTypeData">Añadir Producto</string>
    <string name="err_nameEmpty">Nombre vacio...</string>
    <string name="err_musclesEmpty">Musculos implicados vacio...</string>
    <string name="err_typeExerciseEmpty">Tipo de ejercicio vacío.</string>
    <string name="deleteTypeData">Borrar Ejercicio</string>
    <string name="tvMuscleMain">Músculos Principales</string>
    <string name="action_home">Página Principal</string>
    <string name="ic_action_box">Almacén de datos</string>
    <string name="action_coach">Entrenador Personal</string>
    <string name="action_help">Ayuda</string>
    <string name="menu_settings">Herramientas</string>
    <string name="action_about">Acerca de Nosotros</string>
    <string name="submenuOptions">Otros</string>
    <string name="title_delete">Confirmación de Borrado</string>
    <string name="message_delete_exercise">¿Está seguro de que desea eliminar %1$s ?</string>
    <string name="undo">Undo</string>
    <string name="key_user_account">account</string>
    <string name="key_user">user</string>
    <string name="key_password">password</string>
    <string name="title_account">Cuenta</string>
    <string name="summary_account">Privacidad,seguridad y cambiar nombre.</string>
    <string name="key_account">account</string>
    <string name="tittle_category_notifications">Notificaciones</string>
    <string name="summary_category_notifications">Tonos de mensajes, eventos,recordatirios,etc..</string>
    <string name="key_notifications">notifications</string>
    <string name="summary_notifications">Reprodcir sonidos para los mensajes entrantes.</string>
    <string name="title_rigntone">Tono de las notificaciones</string>
    <string name="key_ringtone">tone</string>
    <string name="title_category_help">Ayuda</string>
    <string name="summary_category_help">Preguntas frecuentes.</string>
    <string name="tittle_facq">Preguntas frecuentes</string>
    <string name="summary_faq">Consulta las preguntas frecuentes de los usuarios</string>
    <string name="tittle_category_sortExercise">Ordenar Listado de ejercicios</string>
    <string name="summary_category_ortExercise">Ordenar ejercicios por el nombre.</string>
    <string name="summary_sortExercise">Ordenar listado de ejercicios por el nombre.</string>
    <string name="key_sortExercise">sortExercise</string>
    <string name="tittle_sortExercise">Listado de Ejercicios</string>
    <string name="tittle_category_sortList">Ordenar Listados</string>
    <string name="summary_category_sortList">Define como ordenar los distintos tipo de listados.</string>
    <string name="exercise">Ejercicios</string>
    <string name="target">Objetivos</string>
    <string name="nameTarget">Nombre del Objetivo</string>
    <string name="edit_target">Editar Objetivo</string>
    <string name="err_exNotExists">El ejercicio no existe en la base de datos.</string>
    <string name="errDateExp">La fecha final, no puede ser antes que la actual.</string>
    <string name="channel_name">channel</string>
    <string name="notification_title_edit_target">Objetivo actualizado</string>
    <string name="notification_text_edit_target">"será notificado el día "</string>
    <string name="err_exerciseExists">Ejercicio ya existente...</string>
    <string name="tittle_notifications">Tonos de conversaci</string>
    <string name="err_user_fb_error">Conexión con FireBase fallida.</string>
    <string name="err_email_notVerified">Email no verificado.(Revisa el correo)</string>
    <string name="key_user_prefs">userprefs</string>
    <string name="err_webserv_connection">Error de conexión con el  servicio web</string>
    <string name="key_user_name">username</string>
    <string name="app_login_passForgot">¿Has olvidado la contraseña?</string>
    <string name="email_send_correctly">El email se ha envíado correctamente...</string>
    <string name="err_user_uid">El id de usuario no se encuentra...</string>
    <string name="msg_userupdate">El nombre fue actualizado correctamente.</string>
    <string name="key_user_imgProfile">userimg</string>
    <string name="tit_imgProfile">Seleccionar una imagen de perfil</string>
    <string name="msg_imgProfile_update">Foto de perfil actualizada correctamente...</string>
    <string name="err_img_file">El fichero no pudo ser encontrado...</string>
    <string name="err_img_notUpdate">No ha sido posible actualizar la img...</string>
    <string name="email_send_incorrectly">El email no se ha envíado correctamente...</string>
    <string name="img_profile_uploading">La imagen se está actualizando</string>
    <string name="action_close_session">Cerrar Sesión</string>
    <string name="err_deleteEx_exception">El ejercicio no se ha borrado correctamente...</string>
    <string name="title_home_time" formatted="true">Gains at %1$s</string>
    <string name="app_editSerie">Editar Serie</string>
    <string name="app_editSerie_weight">Peso en kg</string>
    <string name="app_editSerie_reps">Nº Repeticiones</string>
    <string name="app_editSerie_intensity">Valor de intensidad</string>
    <string name="app_editSerie_restTime">Descanso</string>
    <string name="app_editSerie_time">Ejecución movimiento</string>
    <string name="editSerie_tvTime">Seleccionar tiempo en segundos.</string>
    <string name="typeSerie0">Calentamiento</string>
    <string name="typeSerie1">Aproximación</string>
    <string name="typeSerie2">Efectiva</string>
    <string name="typeSerie3">Fallo</string>
    <string name="app_editSerie_note">Notas...</string>
    <string name="err_empty_reps">No puede estar vacío...</string>
    <string name="fragment_work_data">Añadir Series</string>
    <string name="err_firebaseConnection">Error con la conexión a la base de datos.</string>
    <string name="title_work_data">WorkData</string>
    <string name="title_body_data">BodyData</string>
    <string name="title_fuel_data">FuelData</string>
    <string name="message_delete_workData">¿Está seguro de borrar el registro, %1$s?</string>
    <string name="action_chart">Estadísticas</string>
    <string name="title_chart_work_data">Estadísticas - WorkData</string>
    <string name="rutina_title">Rutinas</string>
    <string name="fechaIni">Desde</string>
    <string name="fechaFin">Hasta</string>
    <string name="setTime_title">Seleccionar intervalo para mostrar el gráfico.</string>
    <string name="filter">Filtrar</string>
    <string name="axisYworkLineChartData">Nº de registros/workData</string>
    <string name="axisXworkLineChartData">Día del registro</string>
    <string name="app_editSerie_copies">¿Duplicar serie?</string>
    <string name="typeExercise">Tipo de Ejercicio</string>
    <string name="err_nofilters_add">Debes añadir obligatoriamente uno de los filtros.</string>
    <string name="neck">Cuello</string>
    <string name="weight">Peso corporal en kg</string>
    <string name="fatPercent">Porcentaje graso</string>
    <string name="addMeasures">Medidas Corporales</string>
    <string name="chest">Pecho</string>
    <string name="musle">Muslo</string>
    <string name="musleL">Muslo Izquierdo</string>
    <string name="calfL">Pantorrilla Izquierda</string>
    <string name="calfR">Pantorrilla Derecha</string>
    <string name="musleR">Muslo derecho</string>
    <string name="bicepsR">Biceps derecho</string>
    <string name="hips">Cadera</string>
    <string name="waist">Cintura</string>
    <string name="shoulder">Hombro</string>
    <string name="bicepsL">Biceps Izquierdo</string>
    <string name="err_weight_empty">El peso corporal no puede estar vacío.</string>
    <string name="axisYLineChartBodyData">Valores del bodyData.</string>
    <string name="axisXLineChartBodyData">Fecha de registro.</string>
    <string name="no_items_error">No existen registros...</string>
    <string name="tittle_category_showExpiratedTargets">Objetivos</string>
    <string name="summary_category_showTargetExp">Mostrará todos los resultados, incluso los expirados.</string>
    <string name="key_showTargetExpirated">showTargetExpirated</string>
    <string name="tittle_showTargetExpirated">Objetivos con fecha expirada.</string>
</resources>