<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- Si no se usa la libreria androidx se puede utilizar el atributo android:fragment para indicar el fragment que se quiere abrir -->
    <Preference android:title="@string/title_account" android:summary="@string/summary_account" android:key="@string/key_account">
    </Preference>
        <PreferenceCategory android:title="@string/tittle_category_notifications" android:summary="@string/summary_category_notifications">

            <SwitchPreference
                android:defaultValue="true"
                android:key="@string/key_notifications"
                android:summary="@string/summary_notifications"
                android:title="@string/tittle_notifications" />
            <ListPreference
                android:defaultValue="1"
                android:entries="@array/ringtone"
                android:entryValues="@array/rigntone_values"
                android:key="@string/key_ringtone"
                android:title="@string/title_rigntone" />

        </PreferenceCategory>
    <PreferenceCategory android:title="@string/tittle_category_sortList" android:summary="@string/summary_category_sortList">

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/key_sortExercise"
            android:summary="@string/summary_sortExercise"
            android:title="@string/tittle_sortExercise" />

    </PreferenceCategory>
    <PreferenceCategory android:title="@string/tittle_category_showExpiratedTargets">

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/key_showTargetExpirated"
            android:summary="@string/summary_category_showTargetExp"
            android:title="@string/tittle_showTargetExpirated" />

    </PreferenceCategory>
    <PreferenceCategory android:title="@string/title_category_help" android:summary="@string/summary_category_help">
        <Preference android:title="@string/tittle_facq" android:summary="@string/summary_faq">
            <intent android:action="android.intent.action.VIEW" android:data="http://gainslog.azurewebsites.net/index.php/blog/"/>
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>