<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:key="@string/key_user_prefs" android:title="Preference cateogry">

        <EditTextPreference
            android:defaultValue="Default value"
            android:key="@string/key_user_name"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="Usuario" />

        <EditTextPreference
            android:defaultValue="Default value"
            android:key="@string/key_password"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="Contraseña" />
    </PreferenceCategory>
    <PreferenceCategory android:key="@string/key_user_prefs" android:title="Preference cateogry">

        <Preference
            android:key="@string/key_user_imgProfile"
            android:title="@string/tit_imgProfile">
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>