<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_login"
    tools:context=".ui.coacinfo.Help_CoachInfoActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/login_marginBottom"
        android:text="@string/hel_coachTitle"
        style="@style/TextStyle_tit3"
        />
        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hel_coachInfo"
            style="@style/TextStyle_textLarge"
            android:layout_marginBottom="@dimen/login_marginBottom"
        />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hel_coachExcTit"
            android:textColor="@color/colorPrimaryDarkBlue"
            style="@style/TextStyle_tit3"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hel_coachExc1"
            style="@style/TextStyle_textLarge"
            android:layout_marginBottom="@dimen/login_marginBottom"
        />
            <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hel_coachExc2"
            style="@style/TextStyle_textLarge"
            android:layout_marginBottom="@dimen/login_marginBottom"
        />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hel_coachVentTit"
            android:textColor="@color/colorPrimaryDarkBlue"
            style="@style/TextStyle_tit3"
        />
             <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hel_coacVent1"
            style="@style/TextStyle_textLarge"
            android:layout_marginBottom="@dimen/login_marginBottom"
                />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hel_coacVent2"
            style="@style/TextStyle_textLarge"
            android:layout_marginBottom="@dimen/login_marginBottom"
                />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hel_coacVentTit3"
            style="@style/TextStyle_textLarge"
            android:layout_marginBottom="@dimen/login_marginBottom"
        />

        <ImageButton
            android:layout_width="@dimen/img_logo_google"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_action_back"
            android:onClick="onClick_backCoachInfo"
            android:layout_gravity="right"/>

</LinearLayout>
</ScrollView>