<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCoachRequest"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
        <androidx.core.widget.NestedScrollView
            android:id="@+id/llCoachClient"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/minMargin"
            android:layout_marginLeft="@dimen/login_marginBottom"
            android:layout_marginRight="@dimen/login_marginBottom"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/login_marginBottom"
                android:text="@string/hel_coachTitle"
                style="@style/TextStyle_tit3"            />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hel_coachInfo"
                style="@style/TextStyle_textLarge"
                android:layout_marginBottom="@dimen/login_marginBottom"            />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hel_coachExcTit"
                android:textColor="@color/colorPrimaryDarkBlue"
                style="@style/TextStyle_tit3"            />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hel_coachExc1"
                style="@style/TextStyle_textLarge"
                android:layout_marginBottom="@dimen/login_marginBottom"            />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hel_coachExc2"
                style="@style/TextStyle_textLarge"
                android:layout_marginBottom="@dimen/login_marginBottom"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hel_coachVentTit"
                android:textColor="@color/colorPrimaryDarkBlue"
                style="@style/TextStyle_tit3"            />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hel_coacVent1"
                style="@style/TextStyle_textLarge"
                android:layout_marginBottom="@dimen/login_marginBottom"            />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hel_coacVent2"
                style="@style/TextStyle_textLarge"
                android:layout_marginBottom="@dimen/login_marginBottom"            />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hel_coacVentTit3"
                style="@style/TextStyle_textLarge"
                android:layout_marginBottom="@dimen/login_marginBottom"            />
        </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnAddCoach"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
            android:layout_marginRight="@dimen/login_marginBottom"
        android:layout_marginBottom="@dimen/login_marginBottom"
        app:fabSize="auto"
        app:backgroundTint="@color/colorPrimary"
        android:contentDescription="@string/addTypeData"
        app:srcCompat="@mipmap/ic_add"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>