<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:id="@+id/coodinatorEdit"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.boxData.exercise.EditExerciseFragment">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/login_marginBottom"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilNameExercise"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/login_marginBottom">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tieNameExercise"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nameExercise"/>
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/size_title3"
        android:text="@string/box_typeDataExercise"/>
    <Spinner
        android:id="@+id/spnType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/login_marginBottom"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/login_marginBottom">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilMusclesExercise"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:layout_weight="2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tieMusclesExercise"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/muscculos"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageButton
            android:id="@+id/imgBtn_listMusclesAdd"
            android:layout_width="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimaryDarkBlue"
            android:background="@mipmap/ic_listadd"/>

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilmaterialExercise"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/login_marginBottom">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiematerialExercise"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/material"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tildescriptionExercise"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/login_marginBottom">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiedescriptionExercise"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/descripotion"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilnotesExercise"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/login_marginBottom">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tienotesExercise"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/notes"/>
    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnEditExercise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginTop="@dimen/login_marginBottom"
            android:layout_marginRight="@dimen/login_marginBottom"
            android:layout_marginBottom="@dimen/login_marginBottom"
            app:fabSize="auto"
            app:backgroundTint="@color/colorPrimary"
            android:contentDescription="@string/addTypeData"
            app:srcCompat="@mipmap/ic_save"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>