<?xml version="1.0" encoding="utf-8"?>
  <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      xmlns:layout="http://schemas.android.com/apk/res-auto"
      android:padding="@dimen/text_margin"
      android:orientation="vertical"
      tools:context=".ui.chartPage.exercise.ChartExerciseFragment">


    <TextView
        android:id="@+id/setTime_title"
        style="@style/TextStyle_tit3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/setTime_title" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilDateFinTarget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tieDateFinTarget"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                android:cursorVisible="false"
                android:focusable="false"
                android:hint="@string/fechaFin"/>
        </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnFilterTargetChart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shapes"
        android:textColor="@color/colorWhite"
        android:layout_marginTop="@dimen/minMargin"
        android:textSize="@dimen/size_title2"
        android:textStyle="bold"
        android:text="@string/filter"/>

    <lecho.lib.hellocharts.view.PieChartView
        android:id="@+id/targetChart"
        android:padding="@dimen/padding_left_header_nav"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>